// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalFilter render should render correctly 1`] = `
<Fragment>
  <div
    className="ins-c-conditional-filter"
  >
    <Text
      id="default-input"
      onChange={[Function]}
      onSubmit={[Function]}
      value=""
      widget-type="InsightsInput"
    />
  </div>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly Checkbox with value checkbox-filter 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Checkbox
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Checkbox
        id="checkbox-filter"
        items={
          Array [
            Object {
              "label": <div>
                Custom value
              </div>,
              "value": "some-value",
            },
            Object {
              "label": "Another",
              "value": "another-value",
            },
            Object {
              "label": "No value",
            },
          ]
        }
        onChange={[Function]}
        placeholder="Filter by Checkbox"
        value={Array []}
      />
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly No value with value undefined 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 1
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Text
        id=""
        onSubmit={[Function]}
        placeholder="Filter by Simple text 1"
        value=""
      />
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly Radio filter with value radio-filter 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Radio filter
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Radio
        id="radio-filter"
        items={
          Array [
            Object {
              "label": <div>
                Custom value
              </div>,
              "value": "some-value",
            },
            Object {
              "label": "Another",
              "value": "another-value",
            },
          ]
        }
        onChange={[Function]}
        placeholder="Filter by Radio filter"
      />
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly Simple text 1 with value simple-text-1 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 1
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Text
        id="simple-text-1"
        onSubmit={[Function]}
        placeholder="Filter by Simple text 1"
        value=""
      />
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly Simple text 2 with value simple-text-2 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 2
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Text
        id="simple-text-2"
        onSubmit={[Function]}
        placeholder="Filter by Simple text 2"
        value="some-value blaa"
      />
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with config 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              No value
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Text
        onSubmit={[Function]}
        placeholder="Filter by No value"
        value=""
      />
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with one filter 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter"
  >
    <SplitItem
      isFilled={true}
    >
      <Text
        onSubmit={[Function]}
        placeholder="Filter by Simple text 1"
        value=""
      />
    </SplitItem>
  </Split>
</Fragment>
`;
